--- a/notebooks/initialModeling.ipynb
+++ b/notebooks/initialModeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,118 +12,225 @@
     "from pyspark.sql import SQLContext\n",
     "from pyspark.sql.types import *\n",
     "from pyspark.sql import functions as F\n",
-    "from pyspark.sql.functions import stddev\n",
+    "from pyspark.sql.functions import *\n",
     "\n",
     "import os\n",
     "import glob\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
+    "#import plotly_express as px\n",
     "\n",
     "sc = SparkContext.getOrCreate()\n",
     "spark = SparkSession(sc)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function Reads Taxi Zone"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def readCSVToDF():\n",
-    "    location = \"/home/yte9pc/Project/Yellow_Cab/\"\n",
+    "def taxiZone():\n",
+    "    taxi = spark.read.csv(\"/home/yte9pc/Project/Yellow_Cab_Data/Taxi_Zone/taxi_zone_lookup.csv\", header = True)\n",
+    "    return taxi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function Reads Yellow Cab CSVs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def yellowCSVToDF():\n",
+    "    location = \"/home/yte9pc/Project/Yellow_Cab_Data/\"\n",
     "\n",
     "    files = sorted(glob.glob(location + '*.csv'))\n",
     "\n",
-    "    summ = 0\n",
     "    for idx,f in enumerate(files):\n",
-    "        df = spark.read.csv(f, header = True)\n",
-    "    \n",
-    "        summ += df.count()\n",
-    "        print(f, df.count(), summ)\n",
-    "        if idx == 0:\n",
-    "            data = df\n",
-    "        else:\n",
-    "            data = data.union(df)\n",
+    "        if idx <= 2:\n",
+    "            df = spark.read.csv(f, header = True)\n",
+    "            print(f)\n",
+    "\n",
+    "            if idx == 0:\n",
+    "                data = df\n",
+    "            else:\n",
+    "                data = data.union(df)\n",
     "    return data"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/yte9pc/Project/Yellow_Cab/yellow_tripdata_2019-01.csv 7667792 7667792\n",
-      "/home/yte9pc/Project/Yellow_Cab/yellow_tripdata_2019-02.csv 7019375 14687167\n",
-      "/home/yte9pc/Project/Yellow_Cab/yellow_tripdata_2019-03.csv 7667526 22354693\n",
-      "/home/yte9pc/Project/Yellow_Cab/yellow_tripdata_2019-04.csv 7433139 29787832\n",
-      "/home/yte9pc/Project/Yellow_Cab/yellow_tripdata_2019-05.csv 7565261 37353093\n",
-      "/home/yte9pc/Project/Yellow_Cab/yellow_tripdata_2019-06.csv 2171886 39524979\n",
-      "/home/yte9pc/Project/Yellow_Cab/yellow_tripdata_2019-07.csv 2130329 41655308\n",
-      "/home/yte9pc/Project/Yellow_Cab/yellow_tripdata_2019-08.csv 6073357 47728665\n",
-      "/home/yte9pc/Project/Yellow_Cab/yellow_tripdata_2019-09.csv 6567788 54296453\n",
-      "/home/yte9pc/Project/Yellow_Cab/yellow_tripdata_2019-10.csv 7213891 61510344\n",
-      "/home/yte9pc/Project/Yellow_Cab/yellow_tripdata_2019-11.csv 6878111 68388455\n",
-      "/home/yte9pc/Project/Yellow_Cab/yellow_tripdata_2019-12.csv 6896317 75284772\n"
-     ]
-    }
-   ],
    "source": [
-    "data = readCSVToDF()"
+    "### Adds Taxi Zone for Pickup and Dropoff"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def yellowTaxiZone():\n",
+    "    # Drop Temp View\n",
+    "    spark.catalog.dropTempView(\"taxiZone\")\n",
+    "    spark.catalog.dropTempView(\"yellowCab\")\n",
+    "    \n",
+    "    taxiZone().createTempView(\"taxiZone\")\n",
+    "    yellowCSVToDF().createTempView(\"yellowCab\")\n",
+    "    yellowCab = spark.sql(\"SELECT yellowCab.*, \\\n",
+    "                     PU.Borough as PUBorough, PU.Zone as PUZone, PU.service_zone as PUSerivce_Zone, \\\n",
+    "                     DO.Borough as DOBorough, DO.Zone as DOZone, DO.service_zone as DOSerivce_Zone\\\n",
+    "                     FROM yellowCab \\\n",
+    "                     INNER JOIN taxiZone PU\\\n",
+    "                            ON yellowCab.PULocationID = PU.LocationID \\\n",
+    "                     INNER JOIN taxiZone DO\\\n",
+    "                            ON yellowCab.DOLocationID = DO.LocationID\")\n",
+    "    return yellowCab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------+--------------------+---------------------+---------------+-------------+----------+------------------+------------+------------+------------+-----------+-----+-------+----------+------------+---------------------+------------+--------------------+\n",
-      "|VendorID|tpep_pickup_datetime|tpep_dropoff_datetime|passenger_count|trip_distance|RatecodeID|store_and_fwd_flag|PULocationID|DOLocationID|payment_type|fare_amount|extra|mta_tax|tip_amount|tolls_amount|improvement_surcharge|total_amount|congestion_surcharge|\n",
-      "+--------+--------------------+---------------------+---------------+-------------+----------+------------------+------------+------------+------------+-----------+-----+-------+----------+------------+---------------------+------------+--------------------+\n",
-      "|       1| 2019-01-01 00:46:40|  2019-01-01 00:53:20|              1|         1.50|         1|                 N|         151|         239|           1|          7|  0.5|    0.5|      1.65|           0|                  0.3|        9.95|                null|\n",
-      "|       1| 2019-01-01 00:59:47|  2019-01-01 01:18:59|              1|         2.60|         1|                 N|         239|         246|           1|         14|  0.5|    0.5|         1|           0|                  0.3|        16.3|                null|\n",
-      "|       2| 2018-12-21 13:48:30|  2018-12-21 13:52:40|              3|          .00|         1|                 N|         236|         236|           1|        4.5|  0.5|    0.5|         0|           0|                  0.3|         5.8|                null|\n",
-      "|       2| 2018-11-28 15:52:25|  2018-11-28 15:55:45|              5|          .00|         1|                 N|         193|         193|           2|        3.5|  0.5|    0.5|         0|           0|                  0.3|        7.55|                null|\n",
-      "|       2| 2018-11-28 15:56:57|  2018-11-28 15:58:33|              5|          .00|         2|                 N|         193|         193|           2|         52|    0|    0.5|         0|           0|                  0.3|       55.55|                null|\n",
-      "|       2| 2018-11-28 16:25:49|  2018-11-28 16:28:26|              5|          .00|         1|                 N|         193|         193|           2|        3.5|  0.5|    0.5|         0|        5.76|                  0.3|       13.31|                null|\n",
-      "|       2| 2018-11-28 16:29:37|  2018-11-28 16:33:43|              5|          .00|         2|                 N|         193|         193|           2|         52|    0|    0.5|         0|           0|                  0.3|       55.55|                null|\n",
-      "|       1| 2019-01-01 00:21:28|  2019-01-01 00:28:37|              1|         1.30|         1|                 N|         163|         229|           1|        6.5|  0.5|    0.5|      1.25|           0|                  0.3|        9.05|                null|\n",
-      "|       1| 2019-01-01 00:32:01|  2019-01-01 00:45:39|              1|         3.70|         1|                 N|         229|           7|           1|       13.5|  0.5|    0.5|       3.7|           0|                  0.3|        18.5|                null|\n",
-      "|       1| 2019-01-01 00:57:32|  2019-01-01 01:09:32|              2|         2.10|         1|                 N|         141|         234|           1|         10|  0.5|    0.5|       1.7|           0|                  0.3|          13|                null|\n",
-      "|       1| 2019-01-01 00:24:04|  2019-01-01 00:47:06|              2|         2.80|         1|                 N|         246|         162|           1|         15|  0.5|    0.5|      3.25|           0|                  0.3|       19.55|                null|\n",
-      "|       1| 2019-01-01 00:21:59|  2019-01-01 00:28:24|              1|          .70|         1|                 N|         238|         151|           1|        5.5|  0.5|    0.5|       1.7|           0|                  0.3|         8.5|                null|\n",
-      "|       1| 2019-01-01 00:45:21|  2019-01-01 01:31:05|              1|         8.70|         1|                 N|         163|          25|           1|       34.5|  0.5|    0.5|      7.15|           0|                  0.3|       42.95|                null|\n",
-      "|       1| 2019-01-01 00:43:19|  2019-01-01 01:07:42|              1|         6.30|         1|                 N|         224|          25|           1|       21.5|  0.5|    0.5|       5.7|           0|                  0.3|        28.5|                null|\n",
-      "|       1| 2019-01-01 00:58:24|  2019-01-01 01:15:18|              1|         2.70|         1|                 N|         141|         234|           1|         13|  0.5|    0.5|         1|           0|                  0.3|        15.3|                null|\n",
-      "|       2| 2019-01-01 00:23:14|  2019-01-01 00:25:40|              1|          .38|         1|                 N|         170|         170|           2|        3.5|  0.5|    0.5|         0|           0|                  0.3|         4.8|                null|\n",
-      "|       2| 2019-01-01 00:39:51|  2019-01-01 00:48:02|              1|          .55|         1|                 N|         170|         170|           1|        6.5|  0.5|    0.5|      1.95|           0|                  0.3|        9.75|                null|\n",
-      "|       2| 2019-01-01 00:46:00|  2019-01-01 00:49:07|              1|          .30|         1|                 N|         107|         107|           1|          4|  0.5|    0.5|      1.06|           0|                  0.3|        6.36|                null|\n",
-      "|       2| 2019-01-01 00:57:45|  2019-01-01 01:03:51|              1|         1.42|         1|                 N|         170|         141|           1|        6.5|  0.5|    0.5|      1.56|           0|                  0.3|        9.36|                null|\n",
-      "|       2| 2019-01-01 00:16:16|  2019-01-01 00:25:57|              1|         1.72|         1|                 N|          41|         247|           2|          9|  0.5|    0.5|         0|           0|                  0.3|        10.3|                null|\n",
-      "+--------+--------------------+---------------------+---------------+-------------+----------+------------------+------------+------------+------------+-----------+-----+-------+----------+------------+---------------------+------------+--------------------+\n",
-      "only showing top 20 rows\n",
+      "/home/yte9pc/Project/Yellow_Cab_Data/yellow_tripdata_2019-01.csv\n",
+      "/home/yte9pc/Project/Yellow_Cab_Data/yellow_tripdata_2019-02.csv\n",
+      "/home/yte9pc/Project/Yellow_Cab_Data/yellow_tripdata_2019-03.csv\n",
+      "22354693\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = yellowTaxiZone()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22354693"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#data.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+----------------+--------------+---------+--------------------+--------------+\n",
+      "|PUBorough|          PUZone|PUSerivce_Zone|DOBorough|              DOZone|DOSerivce_Zone|\n",
+      "+---------+----------------+--------------+---------+--------------------+--------------+\n",
+      "|Manhattan|Manhattan Valley|   Yellow Zone|Manhattan|Upper West Side S...|   Yellow Zone|\n",
+      "+---------+----------------+--------------+---------+--------------------+--------------+\n",
+      "only showing top 1 row\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "data.show()"
+    "data.select(data.columns[-6:]).show(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Defining Column Types"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = data.withColumn(\"tpep_pickup_datetime\", data[\"tpep_pickup_datetime\"].cast(TimestampType()))\\\n",
+    "    .withColumn(\"tpep_dropoff_datetime\", data[\"tpep_dropoff_datetime\"].cast(TimestampType()))\\\n",
+    "    .withColumn(\"passenger_count\", data[\"passenger_count\"].cast(IntegerType()))\\\n",
+    "    .withColumn(\"trip_distance\", data[\"trip_distance\"].cast(FloatType()))\\\n",
+    "    .withColumn(\"fare_amount\", data[\"fare_amount\"].cast(FloatType()))\\\n",
+    "    .withColumn(\"extra\", data[\"extra\"].cast(FloatType()))\\\n",
+    "    .withColumn(\"mta_tax\", data[\"mta_tax\"].cast(FloatType()))\\\n",
+    "    .withColumn(\"tip_amount\", data[\"tip_amount\"].cast(FloatType()))\\\n",
+    "    .withColumn(\"tolls_amount\", data[\"tolls_amount\"].cast(FloatType()))\\\n",
+    "    .withColumn(\"improvement_surcharge\", data[\"improvement_surcharge\"].cast(FloatType()))\\\n",
+    "    .withColumn(\"total_amount\", data[\"total_amount\"].cast(FloatType()))\\\n",
+    "    .withColumn(\"congestion_surcharge\", data[\"congestion_surcharge\"].cast(FloatType()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adding Additional Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-----------+---------------+---------------------+----------------+------------+-----------------+\n",
+      "|tpep_pickup_datetime|pickup_hour|pickup_week_day|tpep_dropoff_datetime|dropoff_week_day|dropoff_hour|  trip_time(mins)|\n",
+      "+--------------------+-----------+---------------+---------------------+----------------+------------+-----------------+\n",
+      "| 2019-01-01 00:46:40|          0|        Tuesday|  2019-01-01 00:53:20|         Tuesday|           0|6.666666666666667|\n",
+      "| 2019-01-01 00:59:47|          0|        Tuesday|  2019-01-01 01:18:59|         Tuesday|           1|             19.2|\n",
+      "| 2018-12-21 13:48:30|         13|         Friday|  2018-12-21 13:52:40|          Friday|          13|4.166666666666667|\n",
+      "+--------------------+-----------+---------------+---------------------+----------------+------------+-----------------+\n",
+      "only showing top 3 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = data.withColumn(\"pickup_week_day\", date_format(\"tpep_pickup_datetime\", \"EEEE\"))\\\n",
+    "    .withColumn(\"pickup_hour\", hour(\"tpep_pickup_datetime\"))\\\n",
+    "    .withColumn(\"dropoff_week_day\", date_format(\"tpep_dropoff_datetime\", \"EEEE\"))\\\n",
+    "    .withColumn(\"dropoff_hour\", hour(\"tpep_dropoff_datetime\"))\\\n",
+    "    .withColumn(\"trip_time(mins)\", (col(\"tpep_dropoff_datetime\").cast(LongType()) - col(\"tpep_pickup_datetime\").cast(LongType()))/60)\n",
+    "data.select([\"tpep_pickup_datetime\", \"pickup_hour\", \"pickup_week_day\", \"tpep_dropoff_datetime\", \n",
+    "             \"dropoff_week_day\", \"dropoff_hour\", \"trip_time(mins)\"]).show(3)"
+   ]
   }
  ],
  "metadata": {
